[workspace]
resolver = "2"
members = [
    "satrs",
    "satrs-mib",
    "satrs-example",
    "satrs-example/models",
    "satrs-example/client",
    "satrs-example/minisim",
    "satrs-shared",
    "embedded-examples/embedded-client",
]

exclude = [
    "embedded-examples/stm32f3-disco-rtic",
    "embedded-examples/stm32h7-nucleo-rtic",
]
