[package]
name = "fsrc-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
hashbrown = "0.12.3"

[dependencies.num-traits]
version = "0.2"
default-features = false

[dependencies.downcast-rs]
version = "1.2.0"
default-features = false

[dependencies.bus]
version = "2.2.3"
optional = true

[dependencies.spacepackets]
path = "../spacepackets"

[dev-dependencies]
postcard = { version = "1.0.1", features = ["use-std"] }
serde = "1.0.143"
zerocopy = "0.6.1"
once_cell = "1.13.1"

[features]
default = ["std"]
std = ["downcast-rs/std", "alloc", "bus"]
alloc = []

