[package]
name = "fsrc-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
delegate = "0.8"
hashbrown = "0.12"
heapless = "0.7"

[dependencies.num-traits]
version = "0.2"
default-features = false

[dependencies.downcast-rs]
version = "1.2"
default-features = false

[dependencies.bus]
version = "2.2"
optional = true

[dependencies.crossbeam-channel]
version= "0.5"
default-features = false

[dependencies.spacepackets]
path = "../spacepackets"

[dev-dependencies]
serde = "1.0"
zerocopy = "0.6"
once_cell = "1.13"

[dev-dependencies.postcard]
version = "1.0"

[features]
default = ["std"]
std = ["downcast-rs/std", "alloc", "bus", "postcard/use-std", "crossbeam-channel/std"]
alloc = []
heapless = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]
