[package]
name = "satrs-core"
version = "0.1.0-alpha.0"
edition = "2021"
rust-version = "1.61"
authors = ["Robin Mueller <muellerr@irs.uni-stuttgart.de>"]
description = "Core components of the sat-rs framework to build software for remote systems"
homepage = "https://egit.irs.uni-stuttgart.de/rust/satrs-core"
repository = "https://egit.irs.uni-stuttgart.de/rust/satrs-core"
license = "Apache-2.0"
keywords = ["no-std", "space", "aerospace"]
categories = ["aerospace", "aerospace::space-protocols", "no-std", "hardware-support", "embedded"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
delegate = ">=0.8, <0.10"
paste = "1"
embed-doc-image = "0.1"

[dependencies.dyn-clone]
version = "1"
optional = true

[dependencies.hashbrown]
version = "0.13"
optional = true

[dependencies.heapless]
version = "0.7"
optional = true

[dependencies.num-traits]
version = "0.2"
default-features = false

[dependencies.downcast-rs]
version = "1.2"
default-features = false
optional = true

[dependencies.bus]
version = "2.2"
optional = true

[dependencies.crossbeam-channel]
version= "0.5"
default-features = false
optional = true

[dependencies.serde]
version = "1"
default-features = false
optional = true

[dependencies.spacepackets]
# version = "0.5.2"
# path = "../spacepackets"
git = "https://egit.irs.uni-stuttgart.de/rust/spacepackets.git"
rev = "8cf6f72cf35df42cc7cde5dd45c77cfd56231dbd"

default-features = false

[dev-dependencies]
serde = "1"
zerocopy = "0.6"
once_cell = "1.13"
serde_json = "1"

[dev-dependencies.postcard]
version = "1.0"

[features]
default = ["std"]
std = [
	"downcast-rs/std",
	"alloc",
	"bus",
	"postcard/use-std",
	"crossbeam-channel/std",
	"serde/std",
	"spacepackets/std"
]
alloc = [
	"serde/alloc",
	"spacepackets/alloc",
	"hashbrown",
	"dyn-clone",
	"downcast-rs"
]
serde = ["dep:serde", "spacepackets/serde"]
crossbeam = ["crossbeam-channel"]
heapless = ["dep:heapless"]
doc-images = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]
