[package]
name = "satrs-example"
version = "0.1.0"
edition = "2021"
authors = ["Robin Mueller <muellerr@irs.uni-stuttgart.de>"]
default-run = "satrs-example"
homepage = "https://egit.irs.uni-stuttgart.de/rust/sat-rs"
repository = "https://egit.irs.uni-stuttgart.de/rust/sat-rs"

[dependencies]
fern = "0.6"
chrono = "0.4"
log = "0.4"
crossbeam-channel = "0.5"
delegate = "0.10"
zerocopy = "0.6"
csv = "1"
num_enum = "0.7"
thiserror = "1"
derive-new = "0.5"

[dependencies.satrs]
# version = "0.1.0-alpha.3"
path = "../satrs"

[dependencies.satrs-mib]
# version = "0.1.0-alpha.2"
path = "../satrs-mib"

[features]
dyn_tmtc = []
default = ["dyn_tmtc"]
