[package]
name = "satrs-example"
version = "0.1.1"
edition = "2021"
authors = ["Robin Mueller <muellerr@irs.uni-stuttgart.de>"]
default-run = "satrs-example"
homepage = "https://egit.irs.uni-stuttgart.de/rust/sat-rs"
repository = "https://egit.irs.uni-stuttgart.de/rust/sat-rs"

[dependencies]
fern = "0.7"
chrono = "0.4"
log = "0.4"
crossbeam-channel = "0.5"
delegate = "0.13"
zerocopy = "0.8"
csv = "1"
num_enum = "0.7"
thiserror = "2"
lazy_static = "1"
strum = { version = "0.27", features = ["derive"] }
derive-new = "0.7"
cfg-if = "1"
arbitrary-int = "2"
bitbybit = "1.4"
postcard = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

satrs = { path = "../satrs", features = ["test_util"] }
satrs-minisim = { path = "../satrs-minisim" }
satrs-mib = { path = "../satrs-mib" }

[features]
# default = ["heap_tmtc"]
# heap_tmtc = []

[dev-dependencies]
env_logger = "0.11"
