[package]
name = "satrs-minisim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
thiserror = "1"

[dependencies.asynchronix]
version = "0.2.1"

[dependencies.satrs]
path = "../satrs"

[dev-dependencies]
delegate = "0.12"
