[package]
name = "msg-pack-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
satrs-minisim = { version = "0.1", path = "../satrs-minisim" }
satrs = { version = "0.2", path = "../satrs" }
rmp-serde = "1"
rmpv = { version = "1", features = ["with-serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
