[package]
name = "satrs-stm32f3-disco-rtic"
version = "0.1.0"
edition = "2021"
default-run = "satrs-stm32f3-disco-rtic"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
defmt = "1"
defmt-rtt = { version = "1" }
panic-probe = { version = "1", features = ["print-defmt"] }
embedded-hal = "1"
cortex-m-semihosting = "0.5.0"
embassy-stm32 = { version = "0.4", features = ["stm32f303vc", "unstable-pac"] }
enumset = "1"
heapless = "0.9"
spacepackets = { version = "0.15", default-features = false, features = ["defmt"] }
static_cell = "2"

[dependencies.rtic]
version = "2"
features = ["thumbv7-backend"]

[dependencies.rtic-monotonics]
version = "2"
features = ["cortex-m-systick"]

[dependencies.cobs]
version = "0.4"
default-features = false

# [dependencies.stm32f3xx-hal]
# git = "https://github.com/robamu/stm32f3xx-hal"
# version = "0.11.0-alpha.0"
# features = ["stm32f303xc", "rt", "enumset"]
# branch = "complete-dma-update"
# Can be used in workspace to develop and update HAL
# path = "../stm32f3xx-hal"

# [dependencies.stm32f3-discovery]
# git = "https://github.com/robamu/stm32f3-discovery"
# version = "0.8.0-alpha.0"
# branch = "complete-dma-update-hal"
# Can be used in workspace to develop and update BSP
# path = "../stm32f3-discovery"

[dependencies.satrs]
# version = "0.2"
path = "../../satrs"
default-features = false
features = ["defmt"]

[dev-dependencies]
defmt-test = "0.4"

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = "s" # <-
overflow-checks = true # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = "s" # <-
overflow-checks = false # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = "s" # <-
overflow-checks = false # <-
