[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pytmtc"
description = "Python TMTC client for OPS-SAT"
readme = "README.md"
version = "0.1.0"
requires-python = ">=3.8"
authors = [
  {name = "Robin Mueller", email = "robin.mueller.m@gmail.com"},
]
dependencies = [
    "tmtccmd~=8.1",
    "pydantic~=2.7"
]

[tool.setuptools.packages]
find = {}

[tool.ruff]
extend-exclude = ["archive"]
[tool.ruff.lint]
ignore = ["E501"]
[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["F401"]
