[package]
name = "satrs-mib-codegen"
version = "0.1.0-alpha.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/tests.rs"

[dependencies]
quote = "1"
proc-macro2 = "1"

[dependencies.satrs-core]
version = "0.1.0-alpha.0"
# path = "../../satrs-core"

[dev-dependencies]
trybuild = { version = "1", features = ["diff"] }

[dev-dependencies.satrs-mib]
path = ".."

[dependencies.syn]
version = "2"
features = ["full"]
