[package]
name = "satrs-mib-codegen"
version = "0.1.0-alpha.0"
edition = "2021"
description = "satrs-mib proc macro implementation"
homepage = "https://egit.irs.uni-stuttgart.de/rust/sat-rs"
repository = "https://egit.irs.uni-stuttgart.de/rust/sat-rs"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/tests.rs"

[dependencies]
quote = "1"
proc-macro2 = "1"

[dependencies.satrs-core]
# version = "0.1.0-alpha.0"
git = "https://egit.irs.uni-stuttgart.de/rust/sat-rs.git"
rev = "35e1f7a983f6535c5571186e361fe101d4306b89"

[dev-dependencies]
trybuild = { version = "1", features = ["diff"] }

[dev-dependencies.satrs-mib]
path = ".."

[dependencies.syn]
version = "2"
features = ["full"]
